welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:70: error: Unmatched closing brace '}' ignored here
}
^